--- a/whatsUpHere/app/src/main/res/layout/activity_historico.xml
+++ b/whatsUpHere/app/src/main/res/layout/activity_historico.xml
@@ -6,13 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".historico"
     android:background="@drawable/background">
-
-    <ListView
-        android:id="@+id/listHistorico"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <WebView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/webmapa"
+        />
+<!--    <ListView-->
+<!--        android:id="@+id/listHistorico"-->
+<!--        android:layout_width="409dp"-->
+<!--        android:layout_height="729dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
