--- a/whatsUpHere/app/src/main/res/layout/activity_ambientes.xml
+++ b/whatsUpHere/app/src/main/res/layout/activity_ambientes.xml
@@ -11,9 +11,34 @@
         android:id="@+id/listaChats"
         style="@style/ContainerComponent"
         android:layout_width="330dp"
-        android:layout_height="790dp"
+        android:layout_height="664dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.555"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_criar_chat"
+        app:layout_constraintVertical_bias="0.345" />
+
+    <Button
+        android:id="@+id/button_criar_chat"
+        android:layout_width="311dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="84dp"
+        android:text="Criar Chat"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.45"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_ambientes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Local"
+        app:layout_constraintBottom_toTopOf="@+id/button_criar_chat"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.707" />
 </androidx.constraintlayout.widget.ConstraintLayout>
