--- a/whatsUpHere/app/src/main/res/layout/activity_home.xml
+++ b/whatsUpHere/app/src/main/res/layout/activity_home.xml
@@ -41,7 +41,7 @@
         android:id="@+id/Historico_id"
         style="@style/buttons"
         android:layout_marginBottom="32dp"
-        android:text="@string/LHistorico"
+        android:text="@string/mapa_local"
         app:layout_constraintBottom_toTopOf="@+id/Config_id"
         app:layout_constraintStart_toStartOf="@+id/containerCompoment" />
 
@@ -57,6 +57,7 @@
         app:layout_constraintStart_toStartOf="@+id/containerCompoment" />
 
     <TextView
+        android:textColor="@color/black"
         android:id="@+id/NomeUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -65,4 +66,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
