--- a/whatsUpHere/app/src/main/res/layout/activity_lista_de_contatos.xml
+++ b/whatsUpHere/app/src/main/res/layout/activity_lista_de_contatos.xml
@@ -34,10 +34,11 @@
     <ListView
         android:id="@+id/list_contatos"
         style="@style/edit_text"
-        android:layout_width="380dp"
-        android:layout_height="318dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="364dp"
+        android:textColor="@color/black"
+        android:layout_height="551dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
 
@@ -47,6 +48,7 @@
         android:layout_height="51dp"
         android:ems="10"
         android:hint="E-mail"
+        android:textColor="@color/black"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
