--- a/whatsUpHere/app/src/main/res/layout/activity_register.xml
+++ b/whatsUpHere/app/src/main/res/layout/activity_register.xml
@@ -36,6 +36,7 @@
         style="@style/edit_text"
         android:hint="nome"
         android:inputType="text"
+        android:textColor="@color/black"
         android:maxLength="100"
         app:layout_constraintEnd_toEndOf="@id/containerCompoment"
         app:layout_constraintStart_toStartOf="@id/containerCompoment"
@@ -46,6 +47,7 @@
         style="@style/edit_text"
         android:drawableRight="@drawable/ic_email"
         android:hint="Email"
+        android:textColor="@color/black"
         android:inputType="textEmailAddress"
         android:maxLength="100"
         app:layout_constraintEnd_toEndOf="@id/tnome"
@@ -60,6 +62,7 @@
         android:inputType="numberPassword"
         android:maxLength="100"
         android:maxLines="2"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@id/temail"
         app:layout_constraintStart_toStartOf="@id/temail"
         app:layout_constraintTop_toBottomOf="@+id/temail" />
