--- a/whatsUpHere/app/src/main/res/layout/activity_trocar_senha.xml
+++ b/whatsUpHere/app/src/main/res/layout/activity_trocar_senha.xml
@@ -14,50 +14,52 @@
         android:layout_height="399dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.302" />
+        app:layout_constraintVertical_bias="0.317" />
 
-    <EditText
-        android:id="@+id/tsenha3"
-        style="@style/edit_text"
-        android:layout_width="310dp"
-        android:layout_height="78dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginBottom="269dp"
-        android:drawableRight="@drawable/ic_eye"
-        android:hint="senha antiga"
-        android:inputType="numberPassword"
-        app:layout_constraintBottom_toBottomOf="@+id/containerCompoment"
-        app:layout_constraintEnd_toEndOf="@+id/containerCompoment"
-        app:layout_constraintTop_toTopOf="@+id/containerCompoment" />
 
     <Button
-        android:id="@+id/button_mudar2"
+        android:id="@+id/btts799"
+        style="@style/buttons"
+        android:layout_width="288dp"
+        android:layout_height="81dp"
+        android:layout_marginStart="60dp"
+        android:text="Trocar senha"
+        app:layout_constraintBottom_toBottomOf="@+id/containerCompoment"
+        app:layout_constraintEnd_toEndOf="@+id/containerCompoment"
+        app:layout_constraintHorizontal_bias="0.085"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/containerCompoment"
+        app:layout_constraintVertical_bias="0.632" />
+
+    <Button
+        android:id="@+id/button123"
         style="@style/buttons"
         android:layout_width="292dp"
         android:layout_height="80dp"
-        android:text="Mudar"
+        android:text="Cancelar"
         app:layout_constraintBottom_toBottomOf="@+id/containerCompoment"
         app:layout_constraintEnd_toEndOf="@+id/containerCompoment"
+        app:layout_constraintHorizontal_bias="0.517"
         app:layout_constraintStart_toStartOf="@+id/containerCompoment"
         app:layout_constraintTop_toTopOf="@+id/containerCompoment"
-        app:layout_constraintVertical_bias="0.86" />
+        app:layout_constraintVertical_bias="0.934" />
 
     <EditText
-        android:id="@+id/tsenha2"
+        android:id="@+id/senha_mudar"
         style="@style/edit_text"
         android:layout_width="310dp"
         android:layout_height="78dp"
-        android:layout_marginBottom="22dp"
         android:drawableRight="@drawable/ic_eye"
         android:hint="senha nova"
+        android:textColor="@color/black"
         android:inputType="numberPassword"
-        app:layout_constraintBottom_toTopOf="@+id/button_mudar2"
+        app:layout_constraintBottom_toTopOf="@+id/btts799"
         app:layout_constraintEnd_toEndOf="@+id/containerCompoment"
         app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="@+id/containerCompoment" />
+        app:layout_constraintStart_toStartOf="@+id/containerCompoment"
+        app:layout_constraintTop_toTopOf="@+id/containerCompoment" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
