--- a/whatsUpHere/app/src/main/res/layout/activity_ambientes.xml
+++ b/whatsUpHere/app/src/main/res/layout/activity_ambientes.xml
@@ -10,15 +10,15 @@
     <ListView
         android:id="@+id/listaChats"
         style="@style/ContainerComponent"
-        android:layout_width="330dp"
-        android:layout_height="664dp"
+        android:layout_width="317dp"
+        android:layout_height="556dp"
+        android:layout_marginTop="112dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_criar_chat"
-        app:layout_constraintVertical_bias="0.345" />
+        app:layout_constraintVertical_bias="0.49" />
 
     <Button
         android:id="@+id/button_criar_chat"
