--- a/whatsUpHere/app/src/main/res/layout/activity_lista_de_contatos.xml
+++ b/whatsUpHere/app/src/main/res/layout/activity_lista_de_contatos.xml
@@ -14,9 +14,10 @@
         android:layout_height="51dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="7dp"
         android:layout_weight="1"
         android:text="Adicionar contato"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/rmv_contato" />
@@ -26,19 +27,20 @@
         android:layout_width="178dp"
         android:layout_height="51dp"
         android:layout_marginStart="16dp"
+        android:layout_marginBottom="7dp"
         android:layout_weight="1"
         android:text="Remover Contato"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress3"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ListView
         android:id="@+id/list_contatos"
         style="@style/edit_text"
         android:layout_width="364dp"
-        android:textColor="@color/black"
         android:layout_height="551dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
 
@@ -48,12 +50,27 @@
         android:layout_height="51dp"
         android:ems="10"
         android:hint="E-mail"
-        android:textColor="@color/black"
         android:inputType="textEmailAddress"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintHorizontal_bias="0.659"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.173" />
+        app:layout_constraintVertical_bias="0.265" />
+
+    <EditText
+        android:id="@+id/editText_nome"
+        android:layout_width="351dp"
+        android:layout_height="45dp"
+        android:ems="10"
+        android:hint="Apelido/Nome"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.516"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.861" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
